Updated to 1.21.1 & now using tinkets